# accounting

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  accounting_reimb_test?cache=shared&mode=memory  aggregation_test?cache=shared&mode=memory  alembic.ini  auth_test?cache=shared&mode=memory  com.sparkry.accounting-backup.plist  conftest.py  est_tax_test?cache=shared&mode=memory  health_llm_test?cache=shared&mode=memory  invoice_test?cache=shared&mode=memory  pyproject.toml  requirements.txt  split_debug?cache=shared&mode=memory  staleness_test?cache=shared&mode=memory  tax_export_test?cache=shared&mode=memory  tax_tips_test?cache=shared&mode=memory  temp_ux_audit.md  tyl_test_db?cache=shared&mode=memory  vr_test?cache=shared&mode=memory  yoy_test_db?cache=shared&mode=memory
.claude/skills/: classify.md  export-bno.md  export-tax.md  health-check.md  import-csv.md  ingest.md  reconcile.md  review.md
.stitch/: DESIGN.md
dashboard/: cfo-review.md  comprehensive-ux-review.md  final-ux-review.md  financials-ux-review.md  package-lock.json  package.json  ux-critic-cycle2.md  ux-critic-review.md  vite.config.ts
dashboard/src/: app.css  app.html
requirements/: current.md  invoice-send-flow.md  invoicing-prd.md  status.md  v2-design.md  v2-improvements.md  v2-use-cases.md  v3-remaining-work.md  v3-ux-financial-enhancements.md  v4-comprehensive-review.md  v4-consolidated-plan.md  v4-plan-review.md  v4-quark-plan.md  v4-review-synthesis.md  v4.1-consolidated-plan.md  v4.3-final-plan.md
scripts/: backup.sh  restore.sh
src/adapters/: __init__.py  bank_csv.py  base.py  (+14 more)
(+123 files in other folders)
